# mortar

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  setup.sh  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/maps/: default.json
shaders/: CMakeLists.txt  mesh.frag  mesh.vert
src/: main.cpp  server_main.cpp
src/animation/: animation_system.cpp  animation_system.h  skeleton.h
src/audio/: audio_engine.cpp  audio_engine.h
src/core/: engine.cpp  engine.h  input.cpp  input.h  types.h
src/ecs/: client_systems.cpp  client_systems.h  components.h  systems.cpp  systems.h
src/ecs/systems/: ai_systems.cpp  ai_systems.h  camera_systems.cpp  camera_systems.h  combat_systems.cpp  combat_systems.h  hud_systems.cpp  hud_systems.h  movement_systems.cpp  movement_systems.h  particle_systems.cpp  particle_systems.h  physics_systems.cpp  physics_systems.h  render_systems.cpp  render_systems.h
src/game/: enemy.cpp  enemy.h  player.cpp  player.h  spawner.cpp  spawner.h  weapon.h
src/map/: map_common.cpp  map_common.h  map_loader.cpp  map_loader.h
src/net/: net_client.cpp  net_client.h  net_common.cpp  net_common.h  net_server.cpp  net_server.h  protocol.h
src/physics/: physics_world.cpp  physics_world.h
src/renderer/: descriptors.cpp  descriptors.h  imgui_renderer.cpp  imgui_renderer.h  material.cpp  material.h  mesh.cpp  mesh.h  model_loader.cpp  model_loader.h  particle_renderer.cpp  particle_renderer.h  pipeline.cpp  pipeline.h  texture.cpp  texture.h
src/server/: game_server.cpp  game_server.h
tools/: bump_version.py  extract_schema.py  schema_meta.toml
